@@ -1,6 +1,7 @@
 2.1.1:
 * Enabled hot-swapping plugins (may require re-configuring enabled plugins)
 * The database editor will prompt before discarding unsaved changes
+* Added graphical flagSpoof editor to the database editor 
 
 2.1.0 (r1640) 2008-10-06:
 * Added BotNet account login
